2004-10-19	blytkerchan
	* preproc.c: include stdlib.h
	include string.h
	include libgen.h if we have it
	(new_preproc_inputfile): return retval
	(new_preproc_token_def): ditto
	* preproc.h (preprocl_putc): remove
	(preprocl_puts): new function
	(preprocl_putf): ditto
	(preprocl_getc): ditto
	* preprocl.l: include preprocessor/preprocp.h in stead of preprocp.h
	include preprocessor/preproc.h in stead of preproc.h
	(dummy): new function
	* preprocp.y: include stdlib.h
	(main): return a value

	* module.mk: remove unnecessary make rules

	* preproc.c: don't include libgen.h

2004-10-18	blytkerchan
	* module.mk: new file

	* version: new file

2004-07-17	blytkerchan
	* Makefile.am [SUBDIRS]: add libmemory
	[jailpp_LDADD]: ditto
	* preprocp.y: normalize use of hash API

2004-04-02	blytkerchan
	* tests/macros_within_macros2.jh: new file

2004-03-25	blytkerchan	finish !include directive support
	* tests/include.jh: new file
	* preproc.c: include libgen
	[include_search_path]: new global variable
	(resolve_abs_filename): (re)write
	(resolve_rel_filename): ditto
	* preproc.h: be more verbose about contents
	add variables defined in preprocl.l and preprocp.y
	(resolve_abs_filename): constify return value
	(resolve_rel_filename): ditto
	* preprocl.l: move variable declarations not defined here to preproc.h
	(incl_state1): don't change state on >
	(incl_state2): rectify regex state
	don't change state on <
	return a token if not ignoring the block
	(preprocl_puts): return an integer
	(preprocl_putf): new function
	* preprocp.y: move declarations not defined here to preproc.h
	(abs_filename): constify filename
	call preprocl_putf
	(rel_filename): ditto (both)

2004-03-24	blytkerchan
	* preprocl.l: add default rule to return unmatched characters to the parser

	* preprocp.y: implement !else directive
	lay the groundworks for a better !include implementation
	* preprocl.l: ditto (both)
	* preproc.c: ditto
	* preproc.h: ditto
	* tests/else.jh: new file